--- a/stream.html
+++ b/stream.html
@@ -124,7 +124,7 @@
         </div>
 
         <div id="stream-controls">
-            <a href="join.html"><button id="leave-btn" title="Leave"><i class="fas fa-sign-out-alt"></i></button></a>
+            <a href="index.html"><button id="leave-btn" title="Leave"><i class="fas fa-sign-out-alt"></i></button></a>
             <button id="mic-btn" title="Toggle Mic"><i class="fas fa-microphone"></i></button>
             <button id="camera-btn" title="Toggle Camera"><i class="fas fa-video"></i></button>
         </div>
